# Generate-Agent

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_BACKEND_DIAGNOSIS.md  FRONTEND_REFACTOR_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTOR_CHECKLIST.md  SYSTEM_CHECK_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  VIDEO_PREVIEW_GUIDE.md  alembic.ini  architecture.md  architecture_zh.md  docker-compose.yml  production_check.py  pyproject.toml  start-frontend.ps1  start.ps1  start.sh  test_video_preview.py  verify_deployment.py  verify_keys.py  worker.py
alembic/: env.py
docker/: entrypoint.sh
docs/: product_feature_map_zh.md
frontend/: .eslintrc.cjs  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: auto-start.ps1  check_production_readiness.py  db-init.ps1  db-init.sh  debug_error.py  diagnose_error.py  manual_scenarios.py  real_world_test.py  run_real_api.py  setup-env.ps1  start-databases.ps1  start-databases.sh  stop-databases.ps1  stop-databases.sh  test_creative_simple.py  test_full_workflow.py  test_serialization.py
tests/: conftest.py  test_agents.py  test_auth.py  test_creative_optimization.py  test_creative_workflow.py  test_e2e_scenarios.py  test_external_apis.py  test_full_system.py  test_general_memory.py  test_general_optimization.py  test_general_session.py  (+4 more)
(+31 files in other folders)
